# mailWriter

./: .gitignore  CMakeLists.txt  README  a.out
src/: mail.cc  mail.h  main.cc
